--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -16,7 +17,9 @@
   "devDependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@mui/joy": "^5.0.0-beta.52",
     "@tailwindcss/postcss": "^4",
+    "antd": "^5.25.1",
     "prettier": "3.5.3",
     "tailwindcss": "^4"
   }
